# quantyx

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  start.ps1  start.sh
backend/: .env.example  package-lock.json  package.json  server.js
backend/lib/: portfolioEngine.js
backend/middleware/: auth.js
backend/ml-engine/: README.md  api.py  app.py  best_model.joblib  pyproject.toml  requirements.txt  stock_prediction copy.ipynb  stock_prediction.ipynb
backend/ml-engine/src/: config.py  data_loader.py  features.py  model.py  sentiment.py  utils.py
backend/models/: Portfolio.js  User.js
backend/routes/: auth.js  portfolio.js
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CandlestickAnimation.jsx  ThemeToggle.jsx
frontend/src/components/dashboard/: HeatmapTile.jsx  StockChart.jsx  TechnicalTile.jsx
frontend/src/components/nav/: AppShell.jsx  DesktopNav.jsx  MarketStatusBar.jsx  MobileNav.jsx  navItems.js
frontend/src/components/ui/: alert.jsx  badge.jsx  breadcrumb.jsx  button.jsx  calendar.jsx  carousel.jsx  chart.jsx  command.jsx  context-menu.jsx  drawer.jsx  dropdown-menu.jsx  form.jsx  input-otp.jsx  menubar.jsx  pagination.jsx  resizable.jsx  sheet.jsx  sidebar.jsx  toast.jsx
frontend/src/constants/: trading.js
frontend/src/features/backtest/: backtestEngine.js  useBacktest.js
frontend/src/features/simulator/: usePaperPortfolio.js
frontend/src/hooks/: use-toast.js  useMarketData.js
frontend/src/lib/: api.js  cache.js  nseStocks.js
frontend/src/lib/market/: priceUtils.js
frontend/src/lib/portfolio/: paperPortfolio.js  portfolioAdapter.js
frontend/src/pages/: Advisor.jsx  Analyse.jsx  Dashboard.jsx  Landing.jsx  Learn.jsx  Login.jsx  NotFound.jsx  Settings.jsx  Simulator.jsx  Watchlist.jsx
frontend/src/services/: apiClient.js
