[project]
name = "quantitative-market-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==6.0.0",
    "asttokens==3.0.1",
    "attrs==26.1.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "curl-cffi==0.13.0",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "entrypoints==0.4",
    "executing==2.2.1",
    "feedparser==6.0.12",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "fonttools==4.62.0",
    "frozendict==2.4.7",
    "gitdb==4.0.12",
    "gitpython==3.1.46",
    "idna==3.11",
    "importlib-metadata==9.0.0",
    "ipykernel==7.2.0",
    "ipython==9.11.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "multitasking==0.0.12",
    "narwhals==2.18.1",
    "nest-asyncio==1.6.0",
    "newsapi-python==0.2.7",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==2.3.3",
    "parso==0.8.6",
    "peewee==4.0.1",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.6",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pyarrow==23.0.1",
    "pycparser==3.0",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pympler==1.1",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "pywin32==311",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "semver==3.0.4",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "smmap==5.0.3",
    "soupsieve==2.8.3",
    "stack-data==0.6.3",
    "streamlit==1.55.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "toolz==1.1.0",
    "tornado==6.5.5",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "tzlocal==5.3.1",
    "urllib3==2.6.3",
    "vadersentiment>=3.3.2",
    "validators==0.35.0",
    "watchdog==6.0.0",
    "wcwidth==0.6.0",
    "websockets==16.0",
    "xgboost==3.2.0",
    "yfinance==1.2.0",
    "zipp==3.23.0",
]
